--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.1",
     "sequelize-cli": "^6.6.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.12.0"
   }
 }
