--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.3",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.12",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.1",
