--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "entropy-string": "^4.2.0",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
